# PreMiD

./: LICENSE  README.md  index.html  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.cjs  vite.config.js
.github/actions/publish-artifacts/: action.yaml
.github/actions/setup-pnpm/: action.yaml
.github/actions/setup-rust/: action.yaml
.github/actions/setup-system/: action.yaml
.github/scripts/: setup-tauri.sh
.github/workflows/: release.yaml
src/: App.svelte  app.postcss  main.ts
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/discord-presence/: Cargo.toml
src-tauri/discord-presence/src/: client.rs  macros.rs
src-tauri/discord-presence/src/connection/: manager.rs  windows.rs
src-tauri/discord-presence/src/models/: rich_presence.rs
src-tauri/src/: main.rs
