[package]
name = "premid"
version = "0.0.0"
description = "A Tauri App"
authors = ["Slowlife01"]
license = ""
repository = ""
edition = "2021"

[build-dependencies]
tauri-build = { version = "1.4", features = [] }

[dependencies]
auto-launch = "0.4.0"
axum = "0.6.20"
crossbeam-channel = "0.5.8"
discord-presence = { path = "./discord-presence" }
notify = "6.0.1"
serde = { version = "1.0.164", features = ["derive", "rc"] }
serde_json = "1.0.96"
socketioxide = "0.3.0"
tauri = { version = "1.3.0", features = [ "system-tray"] }
tauri-api = "0.7.6"
tauri-build = "1.3.0"
tauri-plugin-autostart = { git = "https://github.com/tauri-apps/plugins-workspace?branch=v1" }
tokio = { version = "1.29.1", features = ["sync", "macros"] }

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
